--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -209,6 +209,21 @@
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
   background-color: rgba(70, 127, 207, 0.5);
 }
+.custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
+  border-color: #1991eb;
+}
+
+.custom-control-input:not(:disabled):active ~ .custom-control-label::before {
+  color: #fff;
+  background-color: #d4e1f4;
+  border-color: #d4e1f4;
+}
+.custom-control-input:disabled ~ .custom-control-label {
+  color: #868e96;
+}
+.custom-control-input:disabled ~ .custom-control-label::before {
+  background-color: #f8f9fa;
+}
 /*cards*/
 .item-card {
   position: relative;
@@ -221,7 +236,7 @@
   box-shadow:0 0.0625rem 0.0625rem 0 rgba($color-black,0.2);
 
   &:hover {
-    box-shadow:0 0.125rem 0.375rem 0 rgba($color-black,0.2);
+     box-shadow: 0 0.875rem 1.75rem rgba($color-black,0.25), 0 0.625rem 0.625rem rgba($color-black,0.22);;
   }
 
   &__image {
